--- a/ui/index.html
+++ b/ui/index.html
@@ -41,13 +41,13 @@
 									<i class="fa-solid fa-users"></i> Actions</div>
 								<div class="deposit pos_titolo_deposita">
 									<div class="testo_azioni">Amount to deposited</div>
-									<input type="number" placeholder="Quantità" id="depositaImporto" class="inputs" />
+									<input type="number" placeholder="Amount" id="depositaImporto" class="inputs" />
 									<button class="bottoni_azioni" id="deposit">
 										<i class="fa-solid fa-piggy-bank"></i> DEPOSIT</button>
 								</div>
 								<div class="withdraw pos_titolo_preleva">
 									<div class="testo_azioni">Amount to withdraw</div>
-									<input type="number" placeholder="Quantità" id="ritiraImporto" class="inputs" />
+									<input type="number" placeholder="Amount" id="ritiraImporto" class="inputs" />
 									<button class="bottoni_azioni" id="withdraw">
 										<i class="fa-solid fa-money-check-dollar"></i> WITHDRAW</button>
 								</div>
@@ -63,7 +63,7 @@
 								</div>
 								<div class="seleziona-input">
 									<div class="testo_azioni pos_titolo_trasferimento">Amount to transfer</div>
-									<input type="number" placeholder="Quantità" id="trasferireImporto" class="inputs" />
+									<input type="number" placeholder="Amount" id="trasferireImporto" class="inputs" />
 								</div>
 								<button class="bottoni_azioni" id="trasferimento">
 									<i class="fa-solid fa-user-group"></i> TRANSFER</button>
