--- a/ui/index.html
+++ b/ui/index.html
@@ -56,7 +56,7 @@
 						<div class="azioni_di_destra">
 							<div class="trasferire-soldi">
 								<div class="testo_titoli_azioni pos_titoli_azioni">
-									<i class="fa-solid fa-download"></i> Transfer</div>
+									<i class="fa-solid fa-right-left"></i> Transfer</div> 
 								<div class="seleziona-input">
 									<div class="testo_azioni pos_titolo_ID_giocatore">ID Player</div>
 									<input type="number" placeholder="ID" id="idGiocatore" class="inputs" />
